# sudoku

./: .gitignore  CMakeLists.txt  DigitClassifier.cpp  DigitClassifier.h  README.md  SudokuDetector.cpp  SudokuDetector.h  app.cpp  app.h  build.gradle  gradle.properties  requirements.txt
Sudoku4Android/: gradle.properties  settings.gradle
Sudoku4Android/app/: build.gradle
Sudoku4Android/app/src/main/: AndroidManifest.xml
Sudoku4Android/app/src/main/cpp/: CMakeLists.txt  jni_part.cpp  native-lib.cpp
Sudoku4Android/app/src/main/cpp/sudokucpp/: .gitignore  CMakeLists.txt  CMakeLists_torch.txt
Sudoku4Android/app/src/main/cpp/sudokucpp/app/: CMakeLists.txt
Sudoku4Android/app/src/main/cpp/sudokucpp/app/src/: app.cpp
Sudoku4Android/app/src/main/cpp/sudokucpp/classifier/src/: CellClassifier.cpp
Sudoku4Android/app/src/main/cpp/sudokucpp/detector/: CMakeLists.txt
Sudoku4Android/app/src/main/cpp/sudokucpp/detector/include/: detect_sudoku.h
Sudoku4Android/app/src/main/cpp/sudokucpp/detector/src/: SudokuDetector.cpp  detect_sudoku_v2.cpp
Sudoku4Android/app/src/main/cpp/sudokucpp/legacy/include/: DigitClassifier.h
Sudoku4Android/app/src/main/cpp/sudokucpp/solver/: CMakeLists.txt
Sudoku4Android/app/src/main/cpp/sudokucpp/solver/include/: SudokuSolver.h
Sudoku4Android/app/src/main/cpp/sudokucpp/solver/src/: SudokuSolver.cpp  SudokuSolverDlx.cpp  SudokuSolverDlx.h  benchmark_solvers.cpp  dlx.cpp  dlx.h
Sudoku4Android/app/src/main/cpp/sudokucpp/solver/tests/: any.txt  easy.txt  intermediate.txt  solverTest.cpp  test1.cpp  test_sudokus.txt
Sudoku4Android/app/src/main/cpp/sudokucpp/util/include/: utils.h
Sudoku4Android/app/src/main/cpp/sudokucpp/util/src/: utils.cpp
Sudoku4Android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/android_app/: CMakeLists.txt  README.md
app/src/main/cpp/android_app/include/: camera_manager.h  sudoku_application.h
app/src/main/cpp/android_app/src/: camera_listeners.cpp  camera_manager.cpp  camera_utils.cpp  cv_image_reader.cpp  image_reader.cpp  sudoku_application.cpp
app/src/main/cpp/desktop_app/: CMakeLists.txt
app/src/main/cpp/desktop_app/src/: app.cpp
app/src/main/cpp/jni_binding/: CMakeLists.txt
app/src/main/cpp/nativeui/: CMakeLists.txt
app/src/main/cpp/nativeui/include/: camera_manager.h  camera_utils.h  image_reader.h  media_utils.h  native_debug.h  sudoku_application.h
app/src/main/cpp/nativeui/src/: android_main.cpp  camera_listeners.cpp  camera_manager.cpp  camera_utils.cpp  cv_image_reader.cpp  image_reader.cpp  media_utils.cpp  sudoku_application.cpp  sudoku_application_jni.cpp
app/src/main/cpp/sudokucpp/: .clang-format  CMakeLists.txt
app/src/main/cpp/sudokucpp/app/: CMakeLists.txt
app/src/main/cpp/sudokucpp/classifier/: CMakeLists.txt
app/src/main/cpp/sudokucpp/classifier/include/: CellClassifier.h
app/src/main/cpp/sudokucpp/classifier/src/: CellClassifier.cpp
app/src/main/cpp/sudokucpp/detection_benchmark/: CMakeLists.txt  detection_benchmark.cpp
app/src/main/cpp/sudokucpp/detector/: CMakeLists.txt
app/src/main/cpp/sudokucpp/detector/include/: SudokuDetection.h  SudokuDetector.h  detect_sudoku.h
app/src/main/cpp/sudokucpp/detector/src/: SudokuDetection.cpp  SudokuDetector.cpp  detect_sudoku.cpp  detect_sudoku.h
app/src/main/cpp/sudokucpp/detector/tests/: CMakeLists.txt  detection_benchmark.cpp
app/src/main/cpp/sudokucpp/legacy/src/: SudokuSolver.cpp
app/src/main/cpp/sudokucpp/solver/: CMakeLists.txt
app/src/main/cpp/sudokucpp/solver/include/: SudokuSolver.h
app/src/main/cpp/sudokucpp/solver/src/: ConstraintSudokuSolver.cpp  ConstraintSudokuSolver.h  DlxSudokuSolver.cpp  DlxSudokuSolver.h  SudokuSolver.cpp  benchmark_solvers.cpp  dlx.cpp  dlx.h
app/src/main/cpp/sudokucpp/solver/tests/: CMakeLists.txt  expert.txt  simple.txt  solverTest.cpp
app/src/main/cpp/sudokucpp/solver/tests/include/: test_helper.h
app/src/main/cpp/sudokucpp/solver/tests/src/: mat_init_benchmark.cpp  measure_solver_time.cpp  solverTest.cpp  test_helper.cpp
app/src/main/cpp/sudokucpp/util/: CMakeLists.txt
app/src/main/cpp/sudokucpp/util/include/: cli_opts.h  drawutil.h  geometry.h  mathutil.h  sudoku_grid.h  utils.h  ximgproc_compat.h
app/src/main/cpp/sudokucpp/util/src/: geometry.cpp  sudoku_grid.cpp  utils.cpp
app/src/main/cpp/sudokucpp/util/tests/: CMakeLists.txt  test_geometry.cpp  test_sudoku_grid.cpp
app/src/main/res/layout/: activity_camera.xml  widgets.xml
include/: SudokuDetector.h
share/: .gitignore
src/: DigitClassifier.cpp  DigitClassifier.h  SudokuDetector.cpp  SudokuDetector.h  SudokuSolver.cpp  SudokuSolver.hpp  app.cpp
sudokucpp/: CMakeLists.txt  CMakeSettings.json
sudokucpp/classifier/: CMakeLists.txt  CellClassifier.cpp  test_classifier.cpp
sudokucpp/classifier/include/: CellClassifier.h
sudokucpp/detector/: CMakeLists.txt
sudokucpp/detector/include/: SudokuDetection.h  SudokuDetector.h
sudokucpp/detector/src/: SudokuDetection.cpp  SudokuDetector.cpp
sudokucpp/include/: SudokuDetector.h  SudokuSolver.h  config.h
sudokucpp/legacy/: CMakeLists.txt
sudokucpp/legacy/src/: DigitClassifier.cpp
sudokucpp/solver/: CMakeLists.txt  SudokuSolver.cpp
sudokucpp/solver/include/: SudokuSolver.h
sudokucpp/solver/tests/: CMakeLists.txt
sudokucpp/src/: SudokuDetector.cpp  app.cpp
sudokucpp/util/: CMakeLists.txt
sudokucpp/util/include/: drawutil.h  utils.h  ximgproc_compat.h
sudokucpp/util/src/: utils.cpp
sudokupy/: .gitignore  app.py  classifier.py  config.py  convert_annotations_to_json.py  create_digit_dataset.py  detection_utils.py  eval_detector.py  extract_digit_samples.py  fft_detection_test.py  ground_truth_new.csv  gt_annotator.py  requirements.txt  show_gt.py  sudoku_detector.py  sudoku_util.py  unwarp_sudoku.py  utils.py
sudokupy/classifier/: classifier.py
sudokupy/legacy/: annotation.py  digit_classifier.py  main.py  sudoku_detector.py
sudokupy/solver/: sudoku.py  sudoku_solver.py  test_sudoku_solver.py
(+13 files in other folders)
